crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_section_blockquote_open_trailing_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 99
expression: cst_output
---
DOCUMENT@0..21
  BLOCK_QUOTE@0..21
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HTML_BLOCK@2..21
      HTML_BLOCK_TAG@2..15
        TEXT@2..14 "<section>foo"
        NEWLINE@14..15 "\n"
      HTML_BLOCK_CONTENT@15..21
        BLOCK_QUOTE_MARKER@15..16 ">"
        WHITESPACE@16..17 " "
        TEXT@17..20 "bar"
        NEWLINE@20..21 "\n"
