crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_section_open_trailing_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..13
  HTML_BLOCK@0..13
    HTML_BLOCK_TAG@0..9
      TEXT@0..8 "<section"
      TEXT@8..9 ">"
    PARAGRAPH@9..13
      TEXT@9..12 "foo"
      NEWLINE@12..13 "\n"
