crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_standalone_close_pair_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..11
  HTML_BLOCK@0..11
    HTML_BLOCK_TAG@0..11
      TEXT@0..10 "</p></div>"
      NEWLINE@10..11 "\n"
